2014-02-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Add Alive Test to Create Target and Target Details.

	* src/gsad.c (init_validator): Add alive_tests.

	* src/gsad_omp.c (create_target_omp): Send alive_tests too.

	* src/html/classic/omp.xsl (html-create-target-form): Add Alive Test
	field.
	(target [details]): Show Alive Test.

2014-02-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (user_set_language_code): New function.
	(exec_omp_post): After save_my_settings_omp, when language is NULL,
	set the user's language from the credentials, because the browser value
	will have been set in the credentials.

	* src/gsad_omp.c (save_my_settings_omp): Actually set the language
	return.

2014-02-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl (my_settings.html): Move "Jump to dialog" to
	icon.  Add User Interface Language.

2014-02-12  Matthew Mundell <matthew.mundell@greenbone.net>

	Add setting User Interface Language.

	* src/gsad.c (struct user, user_add): Add language.
	(user_set_language): New function.
	(init_validator): Add "lang".
	(gsad_connection_info): Correct comment.
	(exec_omp_post): Set language from authenticate_omp on user.  Set
	credentials language from user if present.  Set user language after
	save_my_settings.
	(request_handler): Check for user language before using Accept-Language.
	Remove Accept-Language lookup in help case because the language is
	available in the credentials.

	* src/gsad_base.c (set_language_code): New function.

	* src/gsad_base.h: Add header accordingly.

	* src/gsad_omp.c (save_my_settings_omp): Add User Interface Language.
	(authenticate_omp): Add language return.

	* src/gsad_base.h: Update headers accordingly.

	* src/html/classic/omp.xsl (get_my_settings, edit_my_settings): Add User
	Interface Language.

2014-02-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Use definition instead of "en".
